Reorganize assets: move all served files to assets/ directory
- Moved JavaScript from src/ to assets/index.js (not transformed)
- CSS now builds to assets/css/ instead of root
- Updated all references in index.html
- Updated package.json build scripts
- Updated README with clearer structure explanation

New structure logic:
- src/ = only files that get compiled/transformed (SCSS)
- assets/ = all served files (JS, CSS, images, videos)
- Root = only index.html and config files

This makes the project organization more intuitive and consistent.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alliance for Care at Home - Meet Patients Where They Are</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!-- Hero Section -->
@@ -330,6 +330,6 @@
         </div>
     </div>
 
-    <script src="src/index.js"></script>
+    <script src="assets/index.js"></script>
 </body>
 </html>
