--- a/index.html
+++ b/index.html
@@ -297,6 +297,8 @@
     <section class="contact" id="contact">
         <div class="contact__background">
             <img src="assets/images/contact-background.jpg" alt="" class="contact__background-image">
+            <img src="assets/images/contact-background-shape.png" alt="" class="contact__shape-overlay">
+            <img src="assets/images/contact-people.png" alt="" class="contact__people-image">
         </div>
         <div class="contact__content">
             <h2 class="contact__title">Get in touch</h2>
