Align testimonials carousel with other section containers
- Add testimonials__container wrapper to create left alignment anchor
- Remove hardcoded padding-left from track
- Use max-width container approach matching other sections
- Carousel still extends full width to the right
- Maintains consistent left margin throughout page

--- a/index.html
+++ b/index.html
@@ -122,94 +122,96 @@
         </div>
 
         <div class="testimonials__carousel">
-            <div class="testimonials__track">
-                <!-- Testimonial 1: Jessica Wise -->
-                <article class="testimonial-card testimonial-card--sage">
-                    <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
-                    <button class="testimonial-card__play" data-video="jessica-wise">
-                        <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
-                            <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
-                        </svg>
-                        <span>watch</span>
-                    </button>
-                    <div class="testimonial-card__info">
-                        <h3 class="testimonial-card__name">Jessica Wise</h3>
-                        <p class="testimonial-card__title">Registered Nurse and Clinical Leader</p>
-                    </div>
-                </article>
+            <div class="testimonials__container">
+                <div class="testimonials__track">
+                    <!-- Testimonial 1: Jessica Wise -->
+                    <article class="testimonial-card testimonial-card--sage">
+                        <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
+                        <button class="testimonial-card__play" data-video="jessica-wise">
+                            <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
+                                <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
+                            </svg>
+                            <span>watch</span>
+                        </button>
+                        <div class="testimonial-card__info">
+                            <h3 class="testimonial-card__name">Jessica Wise</h3>
+                            <p class="testimonial-card__title">Registered Nurse and Clinical Leader</p>
+                        </div>
+                    </article>
 
-                <!-- Testimonial 2: Tim Ingram -->
-                <article class="testimonial-card testimonial-card--peach">
-                    <img src="assets/images/tim-ingram.png" alt="Tim Ingram" class="testimonial-card__image">
-                    <button class="testimonial-card__play" data-video="tim-ingram">
-                        <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
-                            <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
-                        </svg>
-                        <span>watch</span>
-                    </button>
-                    <div class="testimonial-card__info">
-                        <h3 class="testimonial-card__name">Tim Ingram</h3>
-                        <p class="testimonial-card__title">Care at Home Advocate and Leader</p>
-                    </div>
-                </article>
+                    <!-- Testimonial 2: Tim Ingram -->
+                    <article class="testimonial-card testimonial-card--peach">
+                        <img src="assets/images/tim-ingram.png" alt="Tim Ingram" class="testimonial-card__image">
+                        <button class="testimonial-card__play" data-video="tim-ingram">
+                            <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
+                                <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
+                            </svg>
+                            <span>watch</span>
+                        </button>
+                        <div class="testimonial-card__info">
+                            <h3 class="testimonial-card__name">Tim Ingram</h3>
+                            <p class="testimonial-card__title">Care at Home Advocate and Leader</p>
+                        </div>
+                    </article>
 
-                <!-- Testimonial 3: India Harris-Jones -->
-                <article class="testimonial-card testimonial-card--plum">
-                    <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
-                    <button class="testimonial-card__play" data-video="india-harris-jones">
-                        <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
-                            <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
-                        </svg>
-                        <span>watch</span>
-                    </button>
-                    <div class="testimonial-card__info">
-                        <h3 class="testimonial-card__name">India Harris-Jones</h3>
-                        <p class="testimonial-card__title">Care at Home Advocate and Caregiver</p>
-                    </div>
-                </article>
+                    <!-- Testimonial 3: India Harris-Jones -->
+                    <article class="testimonial-card testimonial-card--plum">
+                        <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
+                        <button class="testimonial-card__play" data-video="india-harris-jones">
+                            <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
+                                <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
+                            </svg>
+                            <span>watch</span>
+                        </button>
+                        <div class="testimonial-card__info">
+                            <h3 class="testimonial-card__name">India Harris-Jones</h3>
+                            <p class="testimonial-card__title">Care at Home Advocate and Caregiver</p>
+                        </div>
+                    </article>
 
-                <!-- Additional testimonials (reusing first 3) -->
-                <article class="testimonial-card testimonial-card--sage">
-                    <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
-                    <button class="testimonial-card__play" data-video="jessica-wise">
-                        <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
-                            <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
-                        </svg>
-                        <span>watch</span>
-                    </button>
-                    <div class="testimonial-card__info">
-                        <h3 class="testimonial-card__name">Jessica Wise</h3>
-                        <p class="testimonial-card__title">Registered Nurse and Clinical Leader</p>
-                    </div>
-                </article>
+                    <!-- Additional testimonials (reusing first 3) -->
+                    <article class="testimonial-card testimonial-card--sage">
+                        <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
+                        <button class="testimonial-card__play" data-video="jessica-wise">
+                            <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
+                                <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
+                            </svg>
+                            <span>watch</span>
+                        </button>
+                        <div class="testimonial-card__info">
+                            <h3 class="testimonial-card__name">Jessica Wise</h3>
+                            <p class="testimonial-card__title">Registered Nurse and Clinical Leader</p>
+                        </div>
+                    </article>
 
-                <article class="testimonial-card testimonial-card--peach">
-                    <img src="assets/images/tim-ingram.png" alt="Tim Ingram" class="testimonial-card__image">
-                    <button class="testimonial-card__play" data-video="tim-ingram">
-                        <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
-                            <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
-                        </svg>
-                        <span>watch</span>
-                    </button>
-                    <div class="testimonial-card__info">
-                        <h3 class="testimonial-card__name">Tim Ingram</h3>
-                        <p class="testimonial-card__title">Care at Home Advocate and Leader</p>
-                    </div>
-                </article>
+                    <article class="testimonial-card testimonial-card--peach">
+                        <img src="assets/images/tim-ingram.png" alt="Tim Ingram" class="testimonial-card__image">
+                        <button class="testimonial-card__play" data-video="tim-ingram">
+                            <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
+                                <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
+                            </svg>
+                            <span>watch</span>
+                        </button>
+                        <div class="testimonial-card__info">
+                            <h3 class="testimonial-card__name">Tim Ingram</h3>
+                            <p class="testimonial-card__title">Care at Home Advocate and Leader</p>
+                        </div>
+                    </article>
 
-                <article class="testimonial-card testimonial-card--plum">
-                    <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
-                    <button class="testimonial-card__play" data-video="india-harris-jones">
-                        <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
-                            <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
-                        </svg>
-                        <span>watch</span>
-                    </button>
-                    <div class="testimonial-card__info">
-                        <h3 class="testimonial-card__name">India Harris-Jones</h3>
-                        <p class="testimonial-card__title">Care at Home Advocate and Caregiver</p>
-                    </div>
-                </article>
+                    <article class="testimonial-card testimonial-card--plum">
+                        <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
+                        <button class="testimonial-card__play" data-video="india-harris-jones">
+                            <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
+                                <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
+                            </svg>
+                            <span>watch</span>
+                        </button>
+                        <div class="testimonial-card__info">
+                            <h3 class="testimonial-card__name">India Harris-Jones</h3>
+                            <p class="testimonial-card__title">Care at Home Advocate and Caregiver</p>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
     </section>
