Optimize images with WebP conversion for massive performance improvement
- Convert all JPG/PNG images to WebP format
- Implement picture elements with WebP/fallback sources
- Reduce total image weight from ~31.8MB to ~5.8MB (82% reduction)
- Key optimizations:
  - hero-background: 11MB → 990KB (91% smaller)
  - hero-color-overlay: 6.2MB → 958KB (85% smaller)
  - quote-background: 5.8MB → 460KB (92% smaller)
  - contact-background-shape: 3.1MB → 600KB (81% smaller)
- All images use picture element for browser compatibility
- WebP quality set to 85 for optimal quality/size balance

--- a/index.html
+++ b/index.html
@@ -29,10 +29,22 @@
     <!-- Hero Section -->
     <section class="hero" id="hero">
         <div class="hero__background">
-            <img src="assets/images/hero-background.jpg" alt="" class="hero__background-image">
-            <img src="assets/images/hero-color-overlay.png" alt="" class="hero__color-overlay">
-            <img src="assets/images/hero-person-left.png" alt="" class="hero__image hero__image--left">
-            <img src="assets/images/hero-person-right.png" alt="" class="hero__image hero__image--right">
+            <picture>
+                <source srcset="assets/images/hero-background.webp" type="image/webp">
+                <img src="assets/images/hero-background.jpg" alt="" class="hero__background-image">
+            </picture>
+            <picture>
+                <source srcset="assets/images/hero-color-overlay.webp" type="image/webp">
+                <img src="assets/images/hero-color-overlay.png" alt="" class="hero__color-overlay">
+            </picture>
+            <picture>
+                <source srcset="assets/images/hero-person-left.webp" type="image/webp">
+                <img src="assets/images/hero-person-left.png" alt="" class="hero__image hero__image--left">
+            </picture>
+            <picture>
+                <source srcset="assets/images/hero-person-right.webp" type="image/webp">
+                <img src="assets/images/hero-person-right.png" alt="" class="hero__image hero__image--right">
+            </picture>
         </div>
         <div class="hero__content">
             <img src="assets/images/alliance-logo-white.svg" alt="National Alliance for Care at Home" class="hero__logo">
@@ -74,7 +86,10 @@
                 </button>
             </div>
             <div class="info-card__image">
-                <img src="assets/images/dynamic-work.jpg" alt="Healthcare professional providing care">
+                <picture>
+                    <source srcset="assets/images/dynamic-work.webp" type="image/webp">
+                    <img src="assets/images/dynamic-work.jpg" alt="Healthcare professional providing care">
+                </picture>
             </div>
         </article>
 
@@ -89,7 +104,10 @@
                 </button>
             </div>
             <div class="info-card__image">
-                <img src="assets/images/patient-impact.jpg" alt="Patient and caregiver interaction">
+                <picture>
+                    <source srcset="assets/images/patient-impact.webp" type="image/webp">
+                    <img src="assets/images/patient-impact.jpg" alt="Patient and caregiver interaction">
+                </picture>
             </div>
         </article>
 
@@ -104,7 +122,10 @@
                 </button>
             </div>
             <div class="info-card__image">
-                <img src="assets/images/collaborative-care.jpg" alt="Team of healthcare professionals">
+                <picture>
+                    <source srcset="assets/images/collaborative-care.webp" type="image/webp">
+                    <img src="assets/images/collaborative-care.jpg" alt="Team of healthcare professionals">
+                </picture>
             </div>
         </article>
     </section>
@@ -145,7 +166,10 @@
                 <div class="testimonials__track">
                     <!-- Testimonial 1: Jessica Wise -->
                     <article class="testimonial-card testimonial-card--sage">
-                        <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
+                        <picture>
+                            <source srcset="assets/images/jessica-wise.webp" type="image/webp">
+                            <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
+                        </picture>
                         <button class="testimonial-card__play" data-video="jessica-wise">
                             <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                 <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
@@ -160,7 +184,10 @@
 
                     <!-- Testimonial 2: Tim Ingram -->
                     <article class="testimonial-card testimonial-card--peach">
-                        <img src="assets/images/tim-ingram.png" alt="Tim Ingram" class="testimonial-card__image">
+                        <picture>
+                            <source srcset="assets/images/tim-ingram.webp" type="image/webp">
+                            <img src="assets/images/tim-ingram.png" alt="Tim Ingram" class="testimonial-card__image">
+                        </picture>
                         <button class="testimonial-card__play" data-video="tim-ingram">
                             <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                 <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
@@ -175,7 +202,10 @@
 
                     <!-- Testimonial 3: India Harris-Jones -->
                     <article class="testimonial-card testimonial-card--plum">
-                        <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
+                        <picture>
+                            <source srcset="assets/images/india-harris-jones.webp" type="image/webp">
+                            <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
+                        </picture>
                         <button class="testimonial-card__play" data-video="india-harris-jones">
                             <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                 <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
@@ -190,7 +220,10 @@
 
                     <!-- Additional testimonials (reusing first 3) -->
                     <article class="testimonial-card testimonial-card--sage">
-                        <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
+                        <picture>
+                            <source srcset="assets/images/jessica-wise.webp" type="image/webp">
+                            <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
+                        </picture>
                         <button class="testimonial-card__play" data-video="jessica-wise">
                             <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                 <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
@@ -204,7 +237,10 @@
                     </article>
 
                     <article class="testimonial-card testimonial-card--peach">
-                        <img src="assets/images/tim-ingram.png" alt="Tim Ingram" class="testimonial-card__image">
+                        <picture>
+                            <source srcset="assets/images/tim-ingram.webp" type="image/webp">
+                            <img src="assets/images/tim-ingram.png" alt="Tim Ingram" class="testimonial-card__image">
+                        </picture>
                         <button class="testimonial-card__play" data-video="tim-ingram">
                             <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                 <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
@@ -218,7 +254,10 @@
                     </article>
 
                     <article class="testimonial-card testimonial-card--plum">
-                        <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
+                        <picture>
+                            <source srcset="assets/images/india-harris-jones.webp" type="image/webp">
+                            <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
+                        </picture>
                         <button class="testimonial-card__play" data-video="india-harris-jones">
                             <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                 <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
@@ -317,9 +356,18 @@
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <div class="contact__background">
-            <img src="assets/images/contact-background.jpg" alt="" class="contact__background-image">
-            <img src="assets/images/contact-background-shape.png" alt="" class="contact__shape-overlay">
-            <img src="assets/images/contact-people.png" alt="" class="contact__people-image">
+            <picture>
+                <source srcset="assets/images/contact-background.webp" type="image/webp">
+                <img src="assets/images/contact-background.jpg" alt="" class="contact__background-image">
+            </picture>
+            <picture>
+                <source srcset="assets/images/contact-background-shape.webp" type="image/webp">
+                <img src="assets/images/contact-background-shape.png" alt="" class="contact__shape-overlay">
+            </picture>
+            <picture>
+                <source srcset="assets/images/contact-people.webp" type="image/webp">
+                <img src="assets/images/contact-people.png" alt="" class="contact__people-image">
+            </picture>
         </div>
         <div class="contact__content">
             <h2 class="contact__title">Get in touch</h2>
