added more FAQs to trigger modal scrolling

--- a/index.html
+++ b/index.html
@@ -108,6 +108,22 @@
                             <h4 class="faq-content__question">How is home care different from hospital care?</h4>
                             <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
                         </div>
+                        <div class="faq-content__item">
+                            <h4 class="faq-content__question">How is home care different from hospital care?</h4>
+                            <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction. one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
+                        </div>
+                        <div class="faq-content__item">
+                            <h4 class="faq-content__question">How is home care different from hospital care?</h4>
+                            <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
+                        </div>
+                        <div class="faq-content__item">
+                            <h4 class="faq-content__question">How is home care different from hospital care?</h4>
+                            <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
+                        </div>
+                        <div class="faq-content__item">
+                            <h4 class="faq-content__question">How is home care different from hospital care?</h4>
+                            <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
+                        </div>
                     </div>
                 </div>
             </article>
