update contact text and email address

--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
             </div>
             <div class="contact__content">
                 <h2 class="contact__title">Get in touch</h2>
-                <p class="contact__description">Whether you have questions about care at home or are ready to make a career change, <strong>we'd love to hear from you.</strong></p>
-                <a href="mailto:info@allianceforhomecare.org" class="contact__button">email us</a>
+                <p class="contact__description">Whether you have questions about care at home or are ready to make a career change, <strong>feel free to email us at communications@allianceforcareathome.org</strong></p>
+                <a href="mailto:communications@allianceforcareathome.org" class="contact__button">email us</a>
             </div>
         </section>
     </main>
@@ -447,7 +447,7 @@
     <!-- Footer -->
     <footer class="footer">
         <img src="assets/images/alliance-logo-navy.svg" alt="National Alliance for Care at Home" class="footer__logo">
-        <p class="footer__copyright">© National Alliance for Care at Home, 2025    |     <a href="#" class="footer__link">Privacy Policy</a></p>
+        <p class="footer__copyright">&copy; National Alliance for Care at Home, 2025    |     <a href="#" class="footer__link">Privacy Policy</a></p>
     </footer>
 
     <!-- Video Modal -->
