--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 <source srcset="assets/images/jessica-wise.webp" type="image/webp">
                                 <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
                             </picture>
-                            <button class="testimonial-card__play" data-video="jessica-wise">
+                            <button class="testimonial-card__play" data-video="163144-20250910-Jessica_Wise-Why_I_Advocate">
                                 <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                     <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
                                 </svg>
@@ -271,7 +271,7 @@
                                 <source srcset="assets/images/india-harris-jones.webp" type="image/webp">
                                 <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
                             </picture>
-                            <button class="testimonial-card__play" data-video="india-harris-jones">
+                            <button class="testimonial-card__play" data-video="162932-20250909-India_Harris-Jones-Why_I_Advocate">
                                 <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                     <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
                                 </svg>
@@ -286,52 +286,52 @@
                         <!-- Additional testimonials (reusing first 3) -->
                         <article class="testimonial-card testimonial-card--sage">
                             <picture>
-                                <source srcset="assets/images/jessica-wise.webp" type="image/webp">
-                                <img src="assets/images/jessica-wise.png" alt="Jessica Wise" class="testimonial-card__image">
+                                <source srcset="assets/images/laura-ehrich.webp" type="image/webp">
+                                <img src="assets/images/laura-ehrich.png" alt="Laura Ehrich" class="testimonial-card__image">
                             </picture>
-                            <button class="testimonial-card__play" data-video="jessica-wise">
+                            <button class="testimonial-card__play" data-video="163014-20250909-Laura_Ehrich-Why_I_Advocate">
                                 <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                     <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
                                 </svg>
                                 <span>watch</span>
                             </button>
                             <div class="testimonial-card__info">
-                                <h3 class="testimonial-card__name">Jessica Wise</h3>
-                                <p class="testimonial-card__title">Registered Nurse and Clinical Leader</p>
+                                <h3 class="testimonial-card__name">Laura Ehrich</h3>
+                                <p class="testimonial-card__title">Lorem Ipsum</p>
                             </div>
                         </article>
 
                         <article class="testimonial-card testimonial-card--peach">
                             <picture>
-                                <source srcset="assets/images/tim-ingram.webp" type="image/webp">
-                                <img src="assets/images/tim-ingram.png" alt="Tim Ingram" class="testimonial-card__image">
+                                <source srcset="assets/images/raianne-melton.webp" type="image/webp">
+                                <img src="assets/images/raianne-melton.png" alt="Raianne Melton" class="testimonial-card__image">
                             </picture>
-                            <button class="testimonial-card__play" data-video="tim-ingram">
+                            <button class="testimonial-card__play" data-video="162925-20250909-Raianne_Melton-Home-Based_Care_Stories">
                                 <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                     <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
                                 </svg>
                                 <span>watch</span>
                             </button>
                             <div class="testimonial-card__info">
-                                <h3 class="testimonial-card__name">Tim Ingram</h3>
-                                <p class="testimonial-card__title">Care at Home Advocate and Leader</p>
+                                <h3 class="testimonial-card__name">Raianne Melton</h3>
+                                <p class="testimonial-card__title">Lorem Ipsum</p>
                             </div>
                         </article>
 
                         <article class="testimonial-card testimonial-card--plum">
                             <picture>
-                                <source srcset="assets/images/india-harris-jones.webp" type="image/webp">
-                                <img src="assets/images/india-harris-jones.png" alt="India Harris-Jones" class="testimonial-card__image">
+                                <source srcset="assets/images/sarah-payne.webp" type="image/webp">
+                                <img src="assets/images/sarah-payne.png" alt="Sarah Payne" class="testimonial-card__image">
                             </picture>
-                            <button class="testimonial-card__play" data-video="india-harris-jones">
+                            <button class="testimonial-card__play" data-video="162980-20250909-Sarah_Payne-Home-Based_Care_Stories">
                                 <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
                                     <path d="M0 0L16 10L0 20V0Z" fill="currentColor"/>
                                 </svg>
                                 <span>watch</span>
                             </button>
                             <div class="testimonial-card__info">
-                                <h3 class="testimonial-card__name">India Harris-Jones</h3>
-                                <p class="testimonial-card__title">Care at Home Advocate and Caregiver</p>
+                                <h3 class="testimonial-card__name">Sarah Payne</h3>
+                                <p class="testimonial-card__title">Lorem Ipsum</p>
                             </div>
                         </article>
                     </div>
